--- a/background.css
+++ b/background.css
@@ -1,8 +1,16 @@
-html {
+html,body {
   height: 100%;
-  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+  background-color: #000000;
   overflow: hidden;
+  color: #ffffff;
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none;
 }
+a:hover{text-decoration: none;}
 
 #stars {
   width: 1px;
